objects/Related_Project_Case__c.object
<CustomObject>
    <description>Related Projects &amp; Cases</description>
    <fields>
        <fullName>Case_Hours__c</fullName>
        <description>Case Hours - Rollup Helper</description>
        <formula>Case__r.Total_Time_Entered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Projects &amp; Cases</relationshipLabel>
        <relationshipName>Related_Projects_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Rev_Rec_90_Days_Rev_100K__c</fullName>
        <formula>MPM4_Project__r.Rev_Rec_90_Days_Rev_100K__c</formula>
        <label>Field Rev Rec &lt; 90 Days/Rev =&gt; $100K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_Project__c</fullName>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Related Projects &amp; Cases</relationshipLabel>
        <relationshipName>Related_Projects_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Open_Project_Revenue__c</fullName>
        <formula>IF ( OR ( ISPICKVAL(MPM4_Project__r.Project_Stage__c, &quot;Cancelled&quot;), ISPICKVAL(MPM4_Project__r.Project_Stage__c, &quot;Closed&quot;)), 0,  MPM4_Project__r.Total_Revenue__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Project Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project3</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Related Projects &amp; Cases</relationshipLabel>
        <relationshipName>Related_Projects_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <formula>TEXT(MPM4_Project__r.Project_Stage__c)</formula>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <label>Related Project &amp; Case</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Project Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Projects &amp; Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>